Web: all tokens comined screen Web: global scaling Web: 1 vBTC == 1 BTC Web: Send Screen vfx/btc toggle updating title Web: sizing adjustments

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -38,19 +38,6 @@
             ]
         },
         {
-            "name": "Web [Local]",
-            "request": "launch",
-            "type": "dart",
-            "args": [
-                "-d",
-                "chrome",
-                "--web-port",
-                "42069",
-                "--dart-define",
-                "ENV=web_local"
-            ],
-        },
-        {
             "name": "Web [Mainnet]",
             "request": "launch",
             "type": "dart",
@@ -60,7 +47,7 @@
                 "--web-port",
                 "42069",
                 "--dart-define",
-                "ENV=web"
+                "ENV=web_mainnet"
             ],
         },
         {
