--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "makefile.extensionOutputFolder": "./.vscode",
-  "dart.flutterSdkPath": ".fvm/versions/3.7.12",
+  "dart.flutterSdkPath": "~/fvm/versions/3.7.12",
   "search.exclude": {
     "**/.fvm": true,
     ".dart_tool": true,
