p2p buy now and auction payment options in place for web => web

--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -27,7 +27,7 @@
 			<string></string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>rbx</string>
+				<string>vfx</string>
 			</array>
 		</dict>
 	</array>
