--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   bitsdojo_window: ^0.1.2
   syncfusion_flutter_charts: ^21.2.4
   flutter_spinkit: ^5.2.1
+  flutter_web_qrcode_scanner: ^1.1.1
 
 dev_dependencies:
   auto_route_generator: ^5.0.3
