--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,6 +25,17 @@
             ]
         },
         {
+            "name": "Mac [Devnet]",
+            "type": "dart",
+            "request": "launch",
+            "args": [
+                "-d",
+                "macos",
+                "--dart-define",
+                "DEVNET=true"
+            ]
+        },
+        {
             "name": "Web [Mainnet]",
             "request": "launch",
             "type": "dart",
@@ -49,7 +60,7 @@
             ]
         },
         {
-            "name": "Web [Devent]",
+            "name": "Web [Devnet]",
             "request": "launch",
             "type": "dart",
             "args": [
