--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   flutter_spinkit: ^5.2.1
   flutter_web_qrcode_scanner: ^1.1.1
   phone_form_field: ^7.1.0
+  share_plus: ^4.5.3
 
 
 dev_dependencies:
